--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^6.2",
-        "php": ">=5.5",
-        "mockery/mockery": "1.0.x-dev"
+        "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^5.7",
+        "mockery/mockery": "1.0.x-dev"
     },
     "autoload": {
         "psr-4": {
