--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ sudo: false
 
 install: travis_retry composer install --no-interaction --prefer-source
 
-script: vendor/bin/phpunit --verbose
+script: ./vendor/bin/phpunit --verbose --coverage-text
