--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6",
+        "phpunit/phpunit": "^7.5",
         "mockery/mockery": "1.0.x-dev"
     },
     "autoload": {
@@ -21,10 +21,8 @@
         }
     },
     "license": "MIT",
-    "authors": [
-        {
-            "name": "overtrue",
-            "email": "i@overtrue.me"
-        }
-    ]
+    "authors": [{
+        "name": "overtrue",
+        "email": "i@overtrue.me"
+    }]
 }
