--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^6.2",
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^7.5",
