--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "overtrue/easy-sms",
+    "name": "888hou/easy-sms",
     "description": "The easiest way to send short message.",
     "type": "library",
     "require": {
