--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^7.5",
+        "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5 || ^9.5",
         "mockery/mockery": "1.3.1"
     },
     "autoload": {
