--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
   phpunit:
     strategy:
       matrix:
-        php_version: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
+        php_version: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4, 8.0, 8.1]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
