--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5 || ^9.5",
-        "mockery/mockery": "1.3.1"
+        "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5.19 || ^9.5.8",
+        "mockery/mockery": "~1.3.3 || ^1.4.2"
     },
     "autoload": {
         "psr-4": {
