--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,13 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5.19 || ^9.5.8",
-        "mockery/mockery": "~1.3.3 || ^1.4.2"
+        "mockery/mockery": "~1.3.3 || ^1.4.2",
+        "brainmaestro/composer-git-hooks": "^2.8",
+        "vimeo/psalm": "^4.10",
+        "phpstan/phpstan": "^1.0",
+        "jetbrains/phpstorm-attributes": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +30,36 @@
     "authors": [{
         "name": "overtrue",
         "email": "i@overtrue.me"
-    }]
+    }],
+    "extra": {
+        "hooks": {
+            "pre-commit": [
+                "composer check-style",
+                "composer psalm",
+                "composer test"
+            ],
+            "pre-push": [
+                "composer check-style"
+            ]
+        }
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "cghooks remove",
+            "cghooks add --ignore-lock",
+            "cghooks update"
+        ],
+        "post-merge": "composer install",
+        "post-install-cmd": [
+            "cghooks remove",
+            "cghooks add --ignore-lock",
+            "cghooks update"
+        ],
+        "phpstan": "phpstan analyse",
+        "check-style": "php-cs-fixer fix --using-cache=no --diff --config=.php-cs-fixer.dist.php --dry-run --allow-risky=yes --ansi",
+        "fix-style": "php-cs-fixer fix --using-cache=no --config=.php-cs-fixer.dist.php --allow-risky=yes --ansi",
+        "test": "phpunit --colors",
+        "psalm": "psalm --show-info=true --no-cache",
+        "psalm-fix": "psalm --no-cache --alter --issues=MissingReturnType,MissingParamType"
+    }
 }
