--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5.19 || ^9.5.8",
         "mockery/mockery": "~1.3.3 || ^1.4.2",
-        "brainmaestro/composer-git-hooks": "^2.8",
-        "jetbrains/phpstorm-attributes": "^1.0"
+        "jetbrains/phpstorm-attributes": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.54"
     },
     "autoload": {
         "psr-4": {
@@ -24,34 +24,13 @@
         }
     },
     "license": "MIT",
-    "authors": [{
-        "name": "overtrue",
-        "email": "i@overtrue.me"
-    }],
-    "extra": {
-        "hooks": {
-            "pre-commit": [
-                "composer check-style",
-                "composer psalm",
-                "composer test"
-            ],
-            "pre-push": [
-                "composer check-style"
-            ]
+    "authors": [
+        {
+            "name": "overtrue",
+            "email": "i@overtrue.me"
         }
-    },
+    ],
     "scripts": {
-        "post-update-cmd": [
-            "cghooks remove",
-            "cghooks add --ignore-lock",
-            "cghooks update"
-        ],
-        "post-merge": "composer install",
-        "post-install-cmd": [
-            "cghooks remove",
-            "cghooks add --ignore-lock",
-            "cghooks update"
-        ],
         "phpstan": "phpstan analyse",
         "check-style": "php-cs-fixer fix --using-cache=no --diff --config=.php-cs-fixer.dist.php --dry-run --allow-risky=yes --ansi",
         "fix-style": "php-cs-fixer fix --using-cache=no --config=.php-cs-fixer.dist.php --allow-risky=yes --ansi",
