--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^6.2 || ^7.0",
-        "php": ">=5.6",
+        "php": ">=8.0",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^7.5 || ^8.5.19 || ^9.5.8",
-        "mockery/mockery": "~1.3.3 || ^1.4.2",
+        "phpunit/phpunit": "^9.5.8",
+        "mockery/mockery": "^1.4.2",
         "jetbrains/phpstorm-attributes": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.54"
     },
